app-vectbase-prod.yaml
apiVersion:  apps/v1
kind: Deployment
metadata:
  name: app-vectbase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-vectbase
  template:
    metadata:
      labels:
        app: app-vectbase
    spec:
      containers:
        - name: app-vectbase
          image: harbor.vectbase.com/prod/app-vectbase:v0.0.1
          imagePullPolicy: Always
          ports:
            - name: http-port
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-vectbase
spec:
  selector:
    app: app-vectbase
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: server
